feature: 样式细节调整

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "h5-verify",
-  "version": "1.1.1",
+  "version": "1.1.7",
   "description": "Jigsaw validation",
   "repository": "",
   "license": "MIT",
@@ -27,8 +27,11 @@
     "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.1",
+    "dart-sass": "^1.23.7",
     "file-loader": "^5.0.2",
     "postcss-loader": "^3.0.0",
+    "sass": "^1.23.7",
+    "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^3.0.0",
